# weather_info_scrapper

./: .env  .gitignore  Makefile  README.md  create_db.py  dashboard_app.py  generate_db_resume.py  pyproject.toml  weather_info_scrapping.py
dags/: dag.py
database/: models.py  repositories.py  utils.py
src/: config.py
src/adapters/document_storage/: factory.py  interface.py
src/adapters/document_storage/local_storage/: adapter.py
src/adapters/scrapper/: factory.py  interface.py
src/adapters/scrapper/bs4/: adapter.py
src/domain/: resume.py  scrapping.py
src/handler/save_db_resume/: app.py  handler.py
src/handler/weather_info_extractor/: app.py  handler.py
src/utils/: models.py  request.py
tests/adapter/document_storage/: local_storage.py
tests/adapter/scrapper/: bs4_adapter.py
tests/handlers/: save_db_resume.py  weather_info_scrapping.py
