[tool.poetry]
name = "dd360-test"
version = "0.1.0"
description = ""
authors = ["Adan H Baena <adan.hernandez@apoyomultiple.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
pandas = "^2.0.2"
fastparquet = "^2023.4.0"
faker = "^18.10.1"


[tool.poetry.group.dev.dependencies]
expects = "^0.9.0"
ruff = "^0.0.272"
mamba = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    "app.py"
]